@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.6297 2008/12/03 11:09:45 marchuet Exp $
+ * $Id: ChangeLog,v 1.6298 2008/12/03 12:18:06 modalsist Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2008-12-03 14:10 UTC+0100 Miguel Angel Marchuet <miguelangel@marchuet.net>
+  * source\rtl\filesys.c
+    * reading correct returned value.
 
 2008-12-03 09:15 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
   * source/rtl/Makefile
